# safe-ptr

./: LICENSE  README.md  safe_ptr.hpp
test/: CMakeLists.txt  README.txt  test_make_safe.cpp  test_safe_ptr.cpp
